# ComfyUI-Open-Sora-I2V

./: README.md  i2v-opensora-v1-2-comfy-example.json  nodes.py  pyproject.toml  t2v-opensora-v1-2-comfy-example.json
configs/pixart/inference/: 1x2048MS.py
opensora/schedulers/dpms/: __init__.py  dpm_solver.py
opensora/schedulers/iddpm/: __init__.py  gaussian_diffusion.py
opensora/schedulers/rf/: __init__.py
opensora/utils/: ckpt_utils.py  inference_utils.py
