[project]
name = "comfyui-open-sora-i2v"
description = "Another comfy implementation for the short video generation project hpcaitech/Open-Sora, supporting latest V2 and V3 models as well as image to video functions, etc."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["colossalai", "accelerate", "diffusers", "ftfy", "gdown", "mmengine", "pre-commit", "pyav", "tensorboard", "timm", "tqdm", "transformers", "wandb"]

[project.urls]
Repository = "https://github.com/bombax-xiaoice/ComfyUI-Open-Sora-I2V"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Open-Sora-I2V"
Icon = ""
